--- a/index.html
+++ b/index.html
@@ -14,44 +14,67 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="container">
-      <nav class="navbar">
-        <div class="balans">
-          <a class="balans__logo" href="">
-            <img src="assets/crypto.svg" alt="">
-          </a>
-          <p class="balans_sum">$23,567.00</p>
-          <!-- <p class="navbar__total">Total winner</p> -->
-        </div>
-        <div class="wallet">
-          <p class="wallet__txt">My Balance</p>
-          <a class="wallet__logo" href="">
-            <img src="assets/Wallet.svg" alt="">
-          </a>
-        </div>
-      </nav>
-    </div>
-    <main>
-      <div class="container">
-        <div class="graphics">
-          <div class="graphics__item1"></div>
-          <div class="graphics__item2"></div>
-          <div class="graphics__item3"></div>
-          <div class="graphics__item4"></div>
-          <div class="graphics__item4"></div>
-          <div class="graphics__item5"></div>
-          <div class="graphics__item6"></div>
-          <div class="graphics__item7"></div>
-          <div class="graphics__item8"></div>
-          <div class="graphics__item8"></div>
-          <div class="graphics__item9"></div>
-          <div class="graphics__item10"></div>
-        </div>
+  <div class="main">
+    <aside class="aside">
 
+    </aside>
+    <header class="header">
+      <div class="container">
+        <nav class="navbar">
+          <div class="balans">
+            <a class="balans__logo" href="">
+              <img src="assets/crypto.svg" alt="">
+            </a>
+            <p class="balans_sum">$23,567.00</p>
+            <!-- <p class="navbar__total">Total winner</p> -->
+          </div>
+          <div class="wallet">
+            <p class="wallet__txt">My Balance</p>
+            <a class="wallet__logo" href="">
+              <img src="assets/Wallet.svg" alt="">
+            </a>
+          </div>
+        </nav>
       </div>
-    </main>
-  </header>
+      <main>
+        <div class="container">
+          <div class="graphics">
+            <div class="graphics__item1"></div>
+            <div class="graphics__item2"></div>
+            <div class="graphics__item3"></div>
+            <div class="graphics__item4"></div>
+            <div class="graphics__item4"></div>
+            <div class="graphics__item5"></div>
+            <div class="graphics__item6"></div>
+            <div class="graphics__item7"></div>
+            <div class="graphics__item8"></div>
+            <div class="graphics__item8"></div>
+            <div class="graphics__item9"></div>
+            <div class="graphics__item10"></div>
+          </div>
+          <div class="container">
+            <div class="footer">
+              <div class="graphic-left">
+                <a class="graphic-left__diagram" href="">
+                  <img src="assets/chart.svg" alt="">
+                </a>
+              </div>
+
+              <div class="graphic-right">
+
+                <div class="diagram">
+                  <img src="assets/line graph.svg" alt="">
+                </div>
+                <a href=""></a>
+                <img src="./assets/green and pink wavy graphics.svg" alt="">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+    </header>
+  </div>
 </body>
 
 </html>
