--- a/index.html
+++ b/index.html
@@ -14,67 +14,114 @@
 </head>
 
 <body>
-  <div class="main">
-    <aside class="aside">
+  <div class="page">
+    <div class="page-content">
+      <aside class="aside">
+        <div class="aside__menu">
+          <div class="theme">
+            <a class="theme__logo" href="">
+              <img src="assets/Sun.svg" alt="">
+            </a>
+            <div class="theme__switch">
+              <img src="assets/Sun_rectangle.svg" alt="">
+            </div>
+          </div>
+          <nav class="navbar-secondary">
+            <div class="navbar-secondary__menu">
+              <a class="navbar-secondary__link" href="">
+                <img src="assets/User Menu Male.svg" alt="">
+              </a>
 
-    </aside>
-    <header class="header">
-      <div class="container">
-        <nav class="navbar">
-          <div class="balans">
-            <a class="balans__logo" href="">
-              <img src="assets/crypto.svg" alt="">
-            </a>
-            <p class="balans_sum">$23,567.00</p>
-            <!-- <p class="navbar__total">Total winner</p> -->
-          </div>
-          <div class="wallet">
-            <p class="wallet__txt">My Balance</p>
-            <a class="wallet__logo" href="">
-              <img src="assets/Wallet.svg" alt="">
-            </a>
-          </div>
-        </nav>
-      </div>
-      <main>
-        <div class="container">
-          <div class="graphics">
-            <div class="graphics__item1"></div>
-            <div class="graphics__item2"></div>
-            <div class="graphics__item3"></div>
-            <div class="graphics__item4"></div>
-            <div class="graphics__item4"></div>
-            <div class="graphics__item5"></div>
-            <div class="graphics__item6"></div>
-            <div class="graphics__item7"></div>
-            <div class="graphics__item8"></div>
-            <div class="graphics__item8"></div>
-            <div class="graphics__item9"></div>
-            <div class="graphics__item10"></div>
-          </div>
+              <p class="navbar-secondary__txt">account</p>
+            </div>
+            <div class="navbar-secondary__menu link-background">
+              <a class="navbar-secondary__link" href="">
+                <img src="assets/Money Bag Bitcoin.svg" alt="">
+              </a>
+              <p class="navbar-secondary__txt">market</p>
+            </div>
+            <div class="navbar-secondary__menu">
+              <a class="navbar-secondary__link " href="">
+                <img src="assets/Student Male.svg" alt="">
+              </a>
+              <p class="navbar-secondary__txt">school</p>
+            </div>
+            <div class="navbar-secondary__menu">
+              <a class="navbar-secondary__link" href="">
+                <img src="assets/Briefcase.svg" alt="">
+              </a>
+              <p class="navbar-secondary__txt">payment</p>
+            </div>
+            <div class="navbar-secondary__menu">
+              <a class="navbar-secondary__link" href="">
+                <img src="assets/Logout Rounded Left.svg" alt="">
+              </a>
+              <p class="navbar-secondary__txt link-txt">exit</p>
+            </div>
+          </nav>
+        </div>
+
+      </aside>
+      <div class="main-content">
+        <header class="header">
           <div class="container">
-            <div class="footer">
-              <div class="graphic-left">
-                <a class="graphic-left__diagram" href="">
-                  <img src="assets/chart.svg" alt="">
+            <nav class="navbar">
+              <div class="balans">
+                <a class="balans__logo" href="">
+                  <img src="assets/crypto.svg" alt="">
+                </a>
+                <p class="balans_sum">$23,5670.00</p>
+              </div>
+              <div class="wallet">
+                <p class="wallet__txt">My Balance</p>
+                <a class="wallet__logo" href="">
+                  <img src="assets/Wallet.svg" alt="">
                 </a>
               </div>
-
-              <div class="graphic-right">
-
-                <div class="diagram">
-                  <img src="assets/line graph.svg" alt="">
+            </nav>
+          </div>
+        </header>
+        <main>
+          <div class="container">
+            <div class="graphics">
+              <div class="graphics__item1"></div>
+              <div class="graphics__item2"></div>
+              <div class="graphics__item3"></div>
+              <div class="graphics__item4"></div>
+              <div class="graphics__item4"></div>
+              <div class="graphics__item5"></div>
+              <div class="graphics__item6"></div>
+              <div class="graphics__item7"></div>
+              <div class="graphics__item8"></div>
+              <div class="graphics__item8"></div>
+              <div class="graphics__item9"></div>
+              <div class="graphics__item10"></div>
+            </div>
+            <div class="container">
+              <div class="footer">
+                <div class="graphic-left">
+                  <a class="graphic-left__diagram" href="">
+                    <img src="assets/chart.svg" alt="">
+                  </a>
                 </div>
-                <a href=""></a>
-                <img src="./assets/green and pink wavy graphics.svg" alt="">
-                </a>
+                <div class="graphic-right">
+                  <div class="diagram">
+                    <img src="assets/line graph.svg" alt="">
+                  </div>
+                  <a href="">
+                    <img src="./assets/green and pink wavy graphics.svg" alt="">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </main>
-    </header>
+        </main>
+      </div>
+
+    </div>
   </div>
+
+
 </body>
 
 </html>
