--- a/index.html
+++ b/index.html
@@ -19,32 +19,31 @@
       <aside class="aside">
         <div class="aside__menu">
           <div class="theme">
-            <a class="theme__logo" href="">
+            <a class="theme__logo background-switch" href="">
               <img src="assets/Sun.svg" alt="">
             </a>
-            <div class="theme__switch">
-              <img src="assets/Sun_rectangle.svg" alt="">
+            <div class="theme__switch ">
             </div>
           </div>
           <nav class="navbar-secondary">
             <div class="navbar-secondary__menu">
               <a class="navbar-secondary__link" href="">
-                <img src="assets/User Menu Male.svg" alt="">
+                <img src="assets/user_menu.svg" alt="">
               </a>
 
               <p class="navbar-secondary__txt">account</p>
             </div>
             <div class="navbar-secondary__menu link-background">
               <a class="navbar-secondary__link" href="">
-                <img src="assets/Money Bag Bitcoin.svg" alt="">
+                <img src="assets/money_bag-bitcoin.svg" alt="">
               </a>
               <p class="navbar-secondary__txt">market</p>
             </div>
             <div class="navbar-secondary__menu">
               <a class="navbar-secondary__link " href="">
-                <img src="assets/Student Male.svg" alt="">
+                <img src="assets/student_male.svg" alt="">
               </a>
-              <p class="navbar-secondary__txt">school</p>
+              <p class=" navbar-secondary__txt">school</p>
             </div>
             <div class="navbar-secondary__menu">
               <a class="navbar-secondary__link" href="">
@@ -54,7 +53,7 @@
             </div>
             <div class="navbar-secondary__menu">
               <a class="navbar-secondary__link" href="">
-                <img src="assets/Logout Rounded Left.svg" alt="">
+                <img src="assets/logout_icon.svg" alt="">
               </a>
               <p class="navbar-secondary__txt link-txt">exit</p>
             </div>
@@ -70,7 +69,10 @@
                 <a class="balans__logo" href="">
                   <img src="assets/crypto.svg" alt="">
                 </a>
-                <p class="balans_sum">$23,5670.00</p>
+                <div class="total">
+                  <p class="balans_sum">$23,5670.00</p>
+
+                </div>
               </div>
               <div class="wallet">
                 <p class="wallet__txt">My Balance</p>
@@ -106,10 +108,10 @@
                 </div>
                 <div class="graphic-right">
                   <div class="diagram">
-                    <img src="assets/line graph.svg" alt="">
+                    <img src="assets/line_graph.svg" alt="">
                   </div>
                   <a href="">
-                    <img src="./assets/green and pink wavy graphics.svg" alt="">
+                    <img src="./assets/colour_wavy.svg" alt="">
                   </a>
                 </div>
               </div>
@@ -117,11 +119,8 @@
           </div>
         </main>
       </div>
-
     </div>
   </div>
-
-
 </body>
 
 </html>
