--- a/index.html
+++ b/index.html
@@ -17,26 +17,22 @@
   <div class="page">
     <div class="page-content">
       <aside class="aside">
+        <div class="theme">
+          <img class="theme__logo" src="assets/Sun.svg" alt="">
+          <img class="theme__background" src="assets/Sun_rectangle.svg" alt="">
+        </div>
         <div class="aside__menu">
-          <div class="theme">
-            <a class="theme__logo background-switch" href="">
-              <img src="assets/Sun.svg" alt="">
-            </a>
-            <div class="theme__switch ">
-            </div>
-          </div>
+
           <nav class="navbar-secondary">
             <div class="navbar-secondary__menu">
               <a class="navbar-secondary__link" href="">
                 <img src="assets/user_menu.svg" alt="">
               </a>
-
               <p class="navbar-secondary__txt">account</p>
             </div>
-            <div class="navbar-secondary__menu link-background">
-              <a class="navbar-secondary__link" href="">
-                <img src="assets/money_bag-bitcoin.svg" alt="">
-              </a>
+            <div class="navbar-secondary__menu wwwee">
+              <img class="navbar-secondary__link" src="assets/money_bag-bitcoin.svg" alt="">
+              <!-- <img class="link-background" src="assets/backgound_market.svg" alt=""> -->
               <p class="navbar-secondary__txt">market</p>
             </div>
             <div class="navbar-secondary__menu">
@@ -59,7 +55,6 @@
             </div>
           </nav>
         </div>
-
       </aside>
       <div class="main-content">
         <header class="header">
@@ -71,7 +66,6 @@
                 </a>
                 <div class="total">
                   <p class="balans_sum">$23,5670.00</p>
-
                 </div>
               </div>
               <div class="wallet">
