--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
           <img class="theme__background" src="assets/Sun_rectangle.svg" alt="">
         </div>
         <div class="aside__menu">
-
           <nav class="navbar-secondary">
             <div class="navbar-secondary__menu">
               <a class="navbar-secondary__link" href="">
@@ -30,7 +29,7 @@
               </a>
               <p class="navbar-secondary__txt">account</p>
             </div>
-            <div class="navbar-secondary__menu wwwee">
+            <div class="navbar-secondary__menu item-background">
               <img class="navbar-secondary__link" src="assets/money_bag-bitcoin.svg" alt="">
               <!-- <img class="link-background" src="assets/backgound_market.svg" alt=""> -->
               <p class="navbar-secondary__txt">market</p>
